[package]
name = "yellowstone-grpc-swap-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
solana-sdk = "2.3.1"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"
